# trader-off

./: .gitignore  .pre-commit-config.yaml  README.md  SMOKE_TEST.md  invalid_combinations.json  opencode.json  pyproject.toml
.louke/: smoke-v0.5.0.txt
.louke/project/: history.md  project.toml
.louke/project/decisions/: v0.3.1-scheduler-review.md
.louke/project/history/: v0.3.2-project.toml  v0.4.1-project.toml  v0.4.3-project.toml
.louke/raw/: security-audit-20260716-202526.json  security-audit-20260716-202549.json  security-audit-20260720-120316.json  security-audit-20260720-134606.json  security-audit-20260720-135802.json
.louke/raw/2026-07-16/: devon-v0.1.0-001-batch1-features.md  devon-v0.1.0-001-batch2-labels-training.md  devon-v0.1.0-001-batch3-predict-strategy.md  devon-v0.1.0-001-batch4-backtest-viz-e2e.md  maestro-stage-m-arch-174343.md  maestro-stage-m-bugfix-202448.md  maestro-stage-m-dev-201015.md  maestro-stage-m-e2e-202356.md  maestro-stage-m-found-145806.md  maestro-stage-m-lock-174450.md  maestro-stage-m-milestone-202721.md  maestro-stage-m-security-202549.md  maestro-stage-m-spec-165254.md  maestro-stage-m-testplan-171959.md  maestro-v0.1.0-001-m-arch-complete.md  maestro-v0.1.0-001-m-dev-complete.md  maestro-v0.1.0-001-m-e2e-complete.md  maestro-v0.1.0-001-m-found-complete.md  maestro-v0.1.0-001-m-lock-complete.md  maestro-v0.1.0-001-m-spec-complete.md  maestro-v0.1.0-001-m-testplan-complete.md  sage-v0.1.0-001-m-spec-initial-draft.md  sage-v0.1.0-001-m-spec-step3-lex-quotes.md  sage-v0.1.0-001-m-spec-step4-5-anchors-lock-issues.md  sage-v0.1.0-001-m-testplan-review.md  scout-v0.1.0-001-foundation.md
.louke/raw/2026-07-17/: devon-FR0300-factor-evaluation.md  devon-FR2100-FR2200-retrain-impl.md  devon-fr0100-rgr-templates.md  devon-fr0200-expression-engine.md  devon-fr0400-selection.md  devon-fr0500-correlation-heatmap.md  devon-fr0700-report-impl.md  devon-fr0800-cli-exit-code-fix.md  devon-fr1700-psi.md  devon-fr1900-perf-monitor.md  devon-fr2000-manual-trigger-cli-api.md  devon-fr2300-registry-impl.md  devon-fr2500-fr2600-state-drift.md  devon-v0.2.0-001-fr0600-registry.md  devon-v0.2.0-001-fr0900-score.md  devon-v0.2.0-001-fr1500-scheduler-core.md  devon-v0.2.0-001-fr1600-cron-trigger.md  devon-v0.2.0-001-fr1800-ks-drift.md  devon-v0.2.0-001-fr2400-deploy.md  devon-v0.2.0-001-module-c-portfolio-foundations.md  lex-v0.2.0-001-stage1-review.md  maestro-stage-m-arch-160502.md  maestro-stage-m-found-100116.md  maestro-stage-m-lock-164648.md  maestro-stage-m-spec-114617.md  maestro-stage-m-testplan-134416.md  maestro-v0.2.0-001-m-found-m-spec-complete.md  sage-m-spec-step1-step2-v0.2.0.md  sage-m-spec-step3-v0.2.0.md  sage-m-spec-step5-step6-v0.2.0.md  (+2 more)
.opencode/agents/: archer.md  devon.md  judge.md  keeper.md  lex.md  librarian.md  maestro.md  prism.md  sage.md  scout.md  shield.md  story.md  warden.md
configs/strategy/: lgbm_top20.yaml
docs/adr/: 0001-cvxpy-scipy-fallback.md  0002-clock-port.md  0003-trainer-port.md  0004-v010-compat.md
scripts/: check_docs_sync.py  convert_fixture_to_quantide.py  run_mutation_tests.sh  security_check.sh
src/trader_off/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_cli_e2e.py  test_convert_fixture_e2e.py  test_factor_mining_e2e.py  test_full_pipeline_e2e.py  test_lgbm_pipeline.py  test_optimize_e2e.py  test_real_backtest_e2e.py  test_real_data_smoke.py  test_scheduler_retrain_e2e.py
tests/integration/: __init__.py  test_api_security.py  test_backtest_cli.py  test_cli_override.py  test_deploy.py  test_eval_output.py  test_factor_mining_cli.py  test_feature_importance_cli.py  test_fixture_manifest.py  test_log_files.py  test_optimize_cli.py  test_persistence_atomic.py  test_predict_service.py  test_real_fetcher.py  test_retrain_cli_api.py  test_retrain_full.py  test_retrain_incremental.py  test_scheduler_cli.py  test_scheduler_resilience.py  test_train_pipeline.py  test_train_with_registry.py  test_v010_compat.py
tests/perf/: baselines.json  test_perf_budget.py
tests/unit/: __init__.py  test_console_scripts.py  test_convert_fixture.py  test_pyproject.py
(+300 files in other folders)
