[project]
name = "trader-off"
version = "0.1.0"
description = "lightGBM-based short-term A-share asset pricing model"
requires-python = ">=3.11"

dependencies = [
    "lightgbm>=4.3",
    "polars>=1.0",
    "loguru>=0.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
    "pytest-socket>=0.7",
    "ruff>=0.5",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "e2e: end-to-end tests",
    "integration: integration tests requiring external dependencies",
    "slow: slow-running tests",
]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
