[project]
name = "trader-off"
version = "0.1.0"
description = "lightGBM-based short-term A-share asset pricing model"
requires-python = ">=3.13"

dependencies = [
    "lightgbm>=4.3",
    "polars>=1.0",
    "loguru>=0.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.3",
    "croniter>=2.0,<3.0",
    "aiohttp>=3.9,<4.0",
    "cvxpy>=1.9.2",
    "quantide @ git+https://github.com/agent-liyi/millionaire.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
    "pytest-socket>=0.7",
    "ruff>=0.5",
    "bandit>=1.7",
]

[project.scripts]
trader-off-backtest = "trader_off.cli.backtest:main"
trader-off-optimize = "trader_off.portfolio.cli:main"
trader-off-mine-factors = "trader_off.factor_mining.cli:main"
trader-off-scheduler = "trader_off.scheduler.cli:main"
trader-off-sync-data = "trader_off.cli.sync_data:main"
trader-off-init = "trader_off.cli.init_data:main"
trader-off-stock-list = "trader_off.cli.stock_list:main"
trader-off-generate-strategy = "trader_off.cli.generate_strategy:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "e2e: end-to-end tests",
    "integration: integration tests requiring external dependencies",
    "slow: slow-running tests",
    "perf: performance benchmark tests (NFR-0100)",
    "asyncio: async tests",
    "timeout: test timeout (pytest-timeout plugin)",
    "socket: network access control (pytest-socket plugin)",
]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
files = ["src/trader_off/scheduler/"]
disallow_any_generics = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "types-pyyaml>=6.0.12.20260518",
    "mutmut>=2.0",
    "psutil>=5.9",
    "ruff>=0.15.21",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=1.4.0",
]

[tool.coverage.run]
source = ["trader_off"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools.packages.find]
where = ["src"]
